# CppDL

./: CMakeLists.txt  ML.sln  README.md  run.cpp
ML/: run.cpp  (+1 more)
test/: CMakeLists.txt
test/include/: print_types.h  test.h  test_helper.h
test/reference/: CMakeLists.txt  reference.hpp
test/reference/matrix/: Test_Matrix_Code.cpp  Test_Matrix_Code.h
test/reference/vector/: Test_Vector_Code.cpp  Test_Vector_Code.h
test/unit_test/matrix/: Test_Matrix_Add.cpp  Test_Matrix_Div.cpp  Test_Matrix_Dot.cpp  Test_Matrix_Mul.cpp  Test_Matrix_ScalarAdd.cpp  Test_Matrix_ScalarDiv.cpp  Test_Matrix_ScalarMul.cpp  Test_Matrix_ScalarSub.cpp  Test_Matrix_Sub.cpp  Test_Matrix_Transpose.cpp  Test_Matrix_VectorAdd.cpp  Test_Matrix_VectorDiv.cpp  Test_Matrix_VectorDot.cpp  Test_Matrix_VectorMul.cpp  Test_Matrix_VectorSub.cpp
test/unit_test/vector/: Test_VectorAdd.cpp  Test_VectorAngle.cpp  Test_VectorArgMax.cpp  Test_VectorArgMin.cpp  Test_VectorArgMinMax.cpp  Test_VectorCorr.cpp  Test_VectorCov.cpp  Test_VectorDiv.cpp  Test_VectorDot.cpp  Test_VectorMag.cpp  Test_VectorMax.cpp  Test_VectorMean.cpp  Test_VectorMin.cpp  Test_VectorMinMax.cpp  Test_VectorMul.cpp  Test_VectorNorm.cpp  Test_VectorScalarAdd.cpp  Test_VectorScalarDiv.cpp  Test_VectorScalarMul.cpp  Test_VectorScalarSub.cpp  Test_VectorSub.cpp  Test_VectorSum.cpp  Test_VectorUnit.cpp  Test_VectorVar.cpp  Test_VectorWeightedSum.cpp  Test_Vector_Add.cpp  Test_Vector_ArgMax.cpp  Test_Vector_ArgMin.cpp  Test_Vector_Corr.cpp  Test_Vector_Cov.cpp  Test_Vector_Div.cpp  Test_Vector_Mag.cpp  Test_Vector_Max.cpp  Test_Vector_Mean.cpp  (+6 more)
(+206 files in other folders)
